<resources>
    <string name="app_name">DHAWINI</string>
    <string name="mascot_description">Mascotte solaire qui vous accueille</string>
    <string name="welcome_message">Bienvenue sur</string>
    <string name="role_message">Choisissez votre role</string>


    <string name="client_title">CLIENT</string>
    <string name="client_subtitle">Je veux installer des panneaux solaires</string>
    <string name="client_button_description">Bouton pour accéder en tant que client particulier</string>

    <string name="installer_title">INSTALLATEUR</string>
    <string name="installer_subtitle">Je suis un professionnel certifié</string>
    <string name="installer_button_description">Bouton pour accéder en tant qu’installateur</string>

    <string name="admin_title">ADMIN</string>
    <string name="admin_subtitle">Accès réservé</string>
    <string name="admin_button_description">Bouton d’accès administrateur réservé</string>

    <string name="anme_logo_description">Logo officiel ANME - Partenaire du Ministère de l’Énergie</string>
    <string name="partnership_text">Partenaire officiel du Ministère de l’Énergie\nCertifié ANME et STEG</string>
    <string name="resend_otp">Renvoyer</string>
    <string name="company_email_hint">Email d\u0027entreprise</string>
    <string name="send_otp">ENVOYER OTP</string>
    <string name="otp_code_hint">Code OTP</string>
    <string name="verify">VÉRIFIER</string>
    <string name="solar_logo_description">Solar logo</string>
    <string name="password_hint">Mot de passe</string>
    <string name="login_button_text">SE CONNECTER</string>
    <string name="revenue_format">%d TND</string>
</resources>